# RegionX

./: README.md  rust-toolchain.toml
contracts/coretime-market/: lib.rs
contracts/xc-regions/: Cargo.toml
contracts/xc-regions/src/: lib.rs  mock.rs  tests.rs
primitives/src/: lib.rs  uniques.rs
