[package]
name = "xc-regions"
authors = ["RegionX <support@regionx.tech>"]
version = "0.1.0"
description = "Cross-chain Regions contracts."
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false, features = ["call-runtime"]}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# OpenBrush dependency
openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", branch = "develop", default-features = false, features=["psp34"] }

environment = { path = "../../environment", default-features = false, features = ["ink"] }
uniques-extension = { path = "../../extension/uniques-extension", default-features = false, features = ["ink"]}
primitives = { path = "../../primitives", default-features = false  }

[dev-dependencies]
ink_e2e = "4.2.1"
obce = { git = "https://github.com/727-Ventures/obce", default-features = false, features = ["ink-std"] }

# Substrate
#
# We need to explicitly turn off some of the `sp-io` features, to avoid conflicts
# (especially for global allocator).
#
# See also: https://substrate.stackexchange.com/questions/4733/error-when-compiling-a-contract-using-the-xcm-chain-extension.
sp-io = { version = "23.0.0", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
sp-runtime = { version = "24.0.0", default-features = false }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "environment/ink-std",
    "uniques-extension/ink-std",
    "primitives/std",
]
ink-as-dependency = []
e2e-tests = []
